# string_processing

./: .gitignore  Cargo.toml  Dockerfile  README.MD  pyproject.toml  release.sh  trying_out_string.py
.github/workflows/: build_wheels.yml  cicd.yml  pypi.yml  release.yml
docs/: index.html
docs/simple/string_processing/: string_processing-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
docs/string_processing/: index.html  string_processing-0.1.0-cp310-cp310-win_amd64.whl
python_testing/: test_python_api.py  trying_out_string.py
simple/: index.html
simple/string_processing/: index.html  string_processing-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
simple/wheels-ubuntu-latest-py3.10/: string_processing-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
src/: byte_sliceable_trait.rs  dev.rs  filter.rs  from_files.rs  has_len_trait.rs  lib.rs  main.rs  optimizer.rs  prefix_removal.rs  remake.rs  remake_hash.rs  string_filter_rolling_hash.rs  test_utils.rs
string_processing/: string_processing.pyi
wheels/wheels-ubuntu-latest-py3.10/: string_processing-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
